--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier-check": "prettier --check --no-config \"**/*\""
   },
   "devDependencies": {
+    "cesium": "^1.119.0",
     "eslint": "^8.56.0",
     "eslint-config-cesium": "^10.0.2",
     "eslint-plugin-es": "^4.1.0",
@@ -38,13 +39,14 @@
     "vite": "^5.0.8",
     "vite-plugin-static-copy": "^1.0.0"
   },
-  "dependencies": {
-    "cesium": "^1.114.0"
-  },
   "lint-staged": {
     "*.{js,html}": [
       "eslint --cache --quiet",
       "prettier --write --no-config"
     ]
+  },
+  "dependencies": {
+    "axios": "^1.7.2",
+    "simplify-js": "^1.2.4"
   }
 }
