--- a/package.json
+++ b/package.json
@@ -47,6 +47,11 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "d3": "^7.9.0",
+    "echarts": "^5.5.1",
+    "proj4": "^2.11.0",
+    "shapefile": "^0.6.6",
+    "shpjs": "^6.0.1",
     "simplify-js": "^1.2.4"
   }
 }
